--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
+  color: white;
   font-size: 3rem;
   line-height: 1.5;
 }
