--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 900;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 3rem;
   line-height: 1.5;
 }
@@ -69,5 +69,33 @@ h1 {
 #features {
   text-align: center;
   margin: 8% auto;
+}
+
+.h2-testimonials {
+  font-weight: bold;
+  width: 80%;
+  padding: 10% 0 0 0;
+}
+
+.testimonial-img {
+  border-radius: 100%;
+  margin: 20px;
+  width: 15rem;
+}
+
+#testimonials {
+  background-color: #ef8172;
+  padding: 7%;
+  color: white;
+}
+
+.press-logo {
+  width: 10rem;
+  margin: 0 50px 50px;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
 }
 
