--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ h1 {
 
 #title {
   background-color: #ff4c68;
+  position: relative;
+  z-index: 0;
 }
 
 .navbar-brand {
@@ -132,3 +134,60 @@ h1 {
   width: 75%;
 }
 
+#pricing{
+  text-align: center;
+  margin: 100px auto;
+}
+
+h2{
+  font-weight: bold;
+}
+
+small{
+  font-size: medium;
+  font-weight: bold;
+}
+
+@media (max-width: 1080px) {
+  
+  #features{
+    padding: 10% 10% 10%;
+    position: static;
+  }
+
+  .title-img{
+    transform: rotate(0);
+  }
+
+  #title{
+    text-align: center;
+  }
+}
+
+h3{
+  font-weight: 900;
+  color: white;
+  font-size: 40px;
+  width: 40%;
+  margin: 0 auto;
+}
+
+#cta{
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 100px;
+}
+
+.media-icon{
+font-size: 20px;
+margin: 60px 20px 20px
+}
+
+.media-link{
+  color: grey;
+}
+
+#footer{
+  background-color: white;
+  text-align: center;
+}
